--- a/style.css
+++ b/style.css
@@ -5,6 +5,38 @@ body {
     background-color: #f0f0f0;
 }
 
+header {
+    background-color: #6ccd8c;
+}
+
+header h1 {
+    padding-top: 5px;
+    font-size: 35px;
+    text-align: center;
+    font-weight: bold;
+}
+
+header h1 .titleBar {
+    color: #d9dcd6;
+}
+
+header nav {
+    padding-top: 10px;
+    float: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+}
+
+header nav ul {
+    list-style-type: none;
+    text-align: center;
+}
+
+header nav ul li {
+    display: inline-block;
+    margin-right: 25px;
+}
+
 .container {
     max-width: 800px;
     margin: 0 auto;
